modelo de ._env